# codegen-detector

./: .coverage  .env.example  .gitignore  README.md  auth.db  main.py  non-functional-testing.bat  non-functional-testing.sh  package-lock.json  pyproject.toml  requirements.txt
MOP/: model_loaded_monitor.py  monitor1.py
aop/: aspects.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/assets/css/: style.css
client/src/pages/: Chat.jsx  ForgotPassword.jsx  Landing.jsx  Login.jsx  Privacy.jsx  Signup.jsx  Subscriptions.jsx  Terms.jsx  landing.css
core/: auth_db.py  configuration.py  db.py  mail_service.py  prediction_facade.py  preprocessor.py
data/: adaboost.json  adaboost.pkl  code_loader.py  dataset.py  lstm_model.pkl  svm_model.pkl
events/: observer.py
features/: base.py  decorator.py  feature_extractor.py  metadata.py  neuralstyle.py
features/extractors/: ast_stats.py  basic.py  ngram.py
models/: __init__.py  adaboost.py  codebert.py  lstm.py  mock.py  openai_detector.py  service.py  svm.py  transformer.py
tests/: ai_code.py  code-style.txt  locustfile.py  pip-audit.txt  results_exceptions.csv  results_failures.csv  results_stats.csv  results_stats_history.csv  safety.txt  sql_inject.py  system_metrics.csv  system_monitor.py  test_feature_decorator.py  test_main_predict.py
tests/code/: human.py  test_feature_decorator_2.py  test_loader.py  test_loader_sample.py  test_main_predict.py  test_prediction_facade.py
training/: calibrate.py  evaluate_models.py  evaluator.py  make_submission.py  train_adaboost.py  train_lstm.py  train_svm.py  train_transformer.py  trainer.py  treshold.py
