[tool.poetry]
name = "cgd"
version = "0.1.0"
description = ""
authors = ["aliaflore <100151385+aliaflore@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
flask = "^3.1.2"
openai-detector = "^0.1.2"
pytest = "^9.0.0"
pyarrow = "^22.0.0"
fastparquet = "^2024.11.0"
scikit-learn = "^1.7.2"
flask-cors = "^6.0.1"
torch = "^2.9.1"
hf-xet = "^1.2.0"
transformers = "^4.57.3"
bandit = "^1.8.0"
safety = "^3.0.0"
pip-audit = "^2.6.0"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", ".git", "client"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "N", "D", "UP", "YTT", "BLE", "B", "A", "C4", "ARG", "SIM", "RUF"]
ignore = ["D100", "D104", "E501", "N806"]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests", "client"]
skips = ["B101"]  # Skip assert_used warnings in test files

[tool.safety]
ignore = []
